# 1INF25

./: .gitignore
2024-2/cap08.a - Java - POO/: publicaciones_v01.mdj  publicaciones_v02.mdj  publicaciones_v03.mdj  publicaciones_v04.mdj
2024-2/cap08.b - Java - ejemplo/: Jerarquia de clases.mdj
Sesión 01 - funciones/Punto_v01/: CMakeLists.txt  main.cpp
Sesión 02 - funciones/Punto_v02/: CMakeLists.txt  main.cpp
Sesión 02 - funciones/Punto_v03/: conjunto.cpp  punto.h
Sesión 03 - funciones/CPunto_v04_dev/: CMakeLists.txt  main.cpp
Sesión 03 - funciones/CPunto_v04_dev/LibreriaEstatica/: conjunto.cpp  punto.cpp  punto.h
Sesión 03 - funciones/CPunto_v04_use/: CMakeLists.txt
Sesión 03 - funciones/CPunto_v04_use/LibreriaEstatica/: conjunto.h
Sesión 03 - funciones/Punto_v03/: CMakeLists.txt  conjunto.h  main.cpp  punto.cpp
Sesión 03 - funciones/Punto_v04_dev_old}/: CMakeLists.txt  conjunto.cpp  main.cpp  punto.cpp  puntos.csv
Sesión 03 - funciones/Punto_v04_dev_old}/LibreriaEstatica/: conjunto.h  punto.h
Sesión 04 - memoria dinámica/memoria_dinamica/: CMakeLists.txt  ConjuntoNumeros.cpp  ConjuntoNumeros.h  main.cpp  nombres.txt
Sesión 04R - memoria dinámica/memoria_dinamica/: ConjuntoNombres.cpp  ConjuntoNombres.h  ConjuntoNumeros.h  main.cpp
Sesión 05 - memoria dinámica/memoria_dinamica/: CMakeLists.txt  ConjuntoNombres.cpp  ConjuntoNombres.h  ConjuntoNumeros.cpp  main.cpp  numeros.txt
Sesión 06 - lab1 - 2024_1/2024_01_Lab01_P1_dev/: CMakeLists.txt  Estructuras.h  cliente.cpp  cliente.h  libro.cpp  libro.h  libro_solicitado.cpp  libro_solicitado.h  main.cpp
Sesión 07 - punteros a punteros/cursos_de_alumnos_Dev/: CMakeLists.txt  ConjuntoArreglos.cpp
Sesión 07 - punteros a punteros/cursos_de_alumnos_Vac/: ConjuntoArreglos.cpp  ConjuntoArreglos.h  main.cpp
Sesión 08 - lab2 - 2025_1/2025_01_Lab2_Dev/: comunes.cpp  faltas.h
Sesión 08 - lab2 - 2025_1/2025_01_Lab2_Vac/: faltas.h
Sesión 09 - punteros a funciones/punteros_a_funciones/: CMakeLists.txt  main.cpp
Sesión 09 - punteros genéricos/punteros_genericos/: CMakeLists.txt  main.cpp
Sesión 10 - lab3 - 2025_1/lab3_2025_1_Dev/: CMakeLists.txt  comunes.cpp  comunes.h  main.cpp  tabla.cpp  tabla.h
Sesión 11 - POO/Punto_v01/: CMakeLists.txt  CPunto2D.cpp  CPunto2D.h  main.cpp
Sesión 12 - lab5 - 2024-1/lab05_2024_01_Dev/: FuncionesEnteras.cpp  FuncionesRegistros.cpp  comunes.h
Sesión 12 - lab5 - 2024-1/lab05_2024_01_Vac/: FuncionesEnteras.cpp  FuncionesRegistros.cpp  FuncionesRegistros.h  comunes.cpp
Sesión 13 - POO/CPersona/: CPersona.cpp  CPersona.h  comunes.cpp  comunes.h  main.cpp
Sesión 13 - POO/Fecha/: CMakeLists.txt  Fecha.cpp  Fecha.h  main.cpp
Sesión 14 - POO/CPersona/: CMakeLists.txt  CPersona.cpp  CPersona.h  main.cpp
Sesión 14 - POO/Fecha/: Fecha.cpp  Fecha.h  main.cpp
Sesión 14 - POO/Punto/: CPunto2D.h  main.cpp
Sesión 15 - POO/CPersona/: CPersona.cpp  CPersona.h  comunes.cpp  main.cpp
Sesión 15 - POO/Punto/: CMakeLists.txt
Sesión 17 - POO - operadores sobrecargados/CPersona/: CPersona.cpp  CPersona.h  comunes.h  main.cpp
Sesión 17 - POO - operadores sobrecargados/Punto/: CPoligono.cpp  CPunto2D.cpp  main.cpp
Sesión 18 - POO - herencia/Lista_v01/: CLista.cpp  CLista.h  CMakeLists.txt
Sesión 18 - POO - herencia/Lista_v02/: CLista.cpp  CLista.h  CMakeLists.txt  CPila.cpp  CPila.h  main.cpp
Sesión 18 - POO - herencia/Lista_v03/: CLista.h  CPila.cpp
Sesión 18 - POO - herencia/Punto/: CPunto3D.cpp
Sesión 18a - POO - herencia/Lista_v01/: main.cpp
Sesión 18a - POO - herencia/Lista_v03/: CPila.h  main.cpp
Sesión 18a - POO - herencia/Punto/: CMakeLists.txt  CPunto3D.h  main.cpp
Sesión 18b - operadores sobrecargados (lab6_2023_2)/Lab06_2023_2 _Dev/: Almacen.cpp  AperturaDeArchivos.cpp  Cliente.h  Comunes.h  Pedido.cpp  Pedidos3.csv  ProductoEntregado.cpp  ProductoEntregado.h
Sesión 18b - operadores sobrecargados (lab6_2023_2)/Lab06_2023_2 _Vac/: Almacen.cpp  Almacen.h  Cliente.cpp  Cliente.h  ProductoEntregado.cpp
Sesión 19 - POO - objetos/Base_Heredada/: Base.cpp  Base.h  CMakeLists.txt  Heredada.cpp  Heredada.h  main.cpp
Sesión 19 - POO - objetos/Punto/: CPoligono.h  CPunto2D.h  CPunto3D.cpp  CPunto3D.h  main.cpp
Sesión 20 - STL (1)/STL_list/: CMakeLists.txt  main.cpp
Sesión 20 - STL (1)/STL_map/: CMakeLists.txt  main.cpp
Sesión 20 - STL (1)/STL_vector/: CMakeLists.txt  CPersona.cpp  CPersona.h  main.cpp
Sesión 21 - STL (2)/Lab06_2025_02_Dev/: CMakeLists.txt
Sesión 21 - STL (2)/Lab06_2025_2/: CMakeLists.txt  Canal.cpp  Canal.h  Categoria.cpp  Categoria.h  Etiqueta.h  (+4 more)
Sesión 22 - lab07 - 2025-1/Herencia/: CMakeLists.txt  CentralDeMonitoreo.cpp  CentralDeMonitoreo.h  Comunes.cpp  Drone.cpp  Drone.h  DroneEstacionamiento.cpp  DroneEstacionamiento.h  DroneSemaforo.cpp  DroneSemaforo.h  DroneVelocidad.cpp  DroneVelocidad.h  Flota.cpp  Flota.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransportes.cpp  MinisterioDeTransportes.h
Sesión 24 - lab08 - 2025-1/Lab08_2025_1/: Arbol.cpp  Arbol.h  CMakeLists.txt  Central.cpp  Central.h  Comunes.h  Drone.cpp  Drone.h  DroneEstacionamiento.cpp  DroneEstacionamiento.h  DroneSemaforo.cpp  DroneSemaforo.h  DroneVelocidad.cpp  DroneVelocidad.h  Nodo.cpp  Nodo.h
Sesión 28 - lab09 - 2025-1/code/: CMakeLists.txt  Empresa.cpp  Empresa.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransporte.cpp  MinisterioDeTransporte.h  Multa.cpp  Multa.h  Vehiculo.cpp  Vehiculo.h
sesión08 - memoria dinámica/2025_01_Lab2_Dev/: CMakeLists.txt  faltas.cpp  main.cpp
sesión08 - memoria dinámica/2025_01_Lab2_Dev/LibreriaApertura/: AperturaDeArchivos.h
sesión12 - lab5 - 2024-1/lab05_2024_01_Dev/: BibliotecaGenerica.cpp  CMakeLists.txt  FuncionesEnteras.h  main.cpp
sesión18b - operadores sobrecargados (lab6_2023_2)/Lab06_2023_2 _Dev/: Almacen.h  CMakeLists.txt  Cliente.cpp  Clientes.csv  Comunes.cpp  Producto.cpp  Producto.h  Productos.csv  main.cpp
(+925 files in other folders)
